# taldabaq

./: .gitignore  README.md
taldaframe/: Cargo.toml
taldaframe-js/: main.js  package-lock.json  package.json  tsconfig.json
taldaframe-js/src/: fetch.ts  main.ts
taldaframe-js/wasm/: http_endpoint_echo_component.core.wasm  http_endpoint_echo_component.js  http_endpoint_page_component.core.wasm  http_endpoint_page_component.d.ts  http_endpoint_page_component.js  http_endpoint_proxy_component.core.wasm  http_endpoint_proxy_component.d.ts  http_endpoint_proxy_component.js
taldaframe-js/wasm/interfaces/: http-outgoing.d.ts  http-types.d.ts  taldawasm-main-http-endpoint.d.ts  taldawasm-main-mqtt-endpoint.d.ts
taldaframe/src/: http.rs  http_endpoint.rs  main.rs
taldaframe/tests/: http_integration_test.rs
taldaframe/tests/wasm_test_apps/: http_endpoint_echo_component.wasm  http_endpoint_page_component.wasm  http_endpoint_proxy_component.wasm  wasm_echo.wasm  wasm_echo_component.wasm  wasm_echo_copy.wasm
taldawasm/: Cargo.toml
taldawasm/crates/http-endpoint/: Cargo.toml
taldawasm/crates/http-endpoint/src/: lib.rs
taldawasm/crates/mqtt-endpoint/: Cargo.toml
taldawasm/crates/mqtt-endpoint/src/: lib.rs
taldawasm/examples/http-endpoint/: Cargo.toml
taldawasm/examples/http-endpoint-echo/: Cargo.toml
taldawasm/examples/http-endpoint-echo/src/: lib.rs
taldawasm/examples/http-endpoint-page/: Cargo.toml
taldawasm/examples/http-endpoint-page/public/: index.html
taldawasm/examples/http-endpoint-page/src/: lib.rs
taldawasm/examples/http-endpoint-proxy/: Cargo.toml
taldawasm/examples/http-endpoint-proxy/src/: lib.rs
taldawasm/examples/http_endpoint/: Cargo.toml
taldawasm/examples/http_endpoint/src/: lib.rs
taldawasm/examples/http_server/: Cargo.toml
taldawasm/examples/http_server/src/: main.rs
taldawasm/examples/mqtt-endpoint/: Cargo.toml
taldawasm/examples/mqtt-endpoint/src/: lib.rs
taldawasm/http_wrapper/: Cargo.toml
taldawasm/http_wrapper/src/: lib.rs
taldawasm/macros/guest/: Cargo.toml
taldawasm/macros/guest/src/: lib.rs
taldawasm/macros/http-endpoint/: Cargo.toml
taldawasm/macros/http-endpoint/src/: lib.rs  parse_source.rs
taldawasm/macros/mqtt-endpoint/: Cargo.toml
taldawasm/macros/mqtt-endpoint/src/: lib.rs
taldawasm/src/: http_endpoint.rs  lib.rs
taldawasm/src/host/: http_endpoint.rs
taldawasm/structs/src/: lib.rs
taldawasm/tests/: main.rs
taldawasm/wit/: deps.toml  endpoint.wit  http-endpoint-types.wit  http-endpoint.wit  http-outgoing.wit  http-types.wit  mqtt-endpoint.wit
