[package]
name = "taldaframe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
base64 = "0.21.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.4.0", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
wasmtime = { version = "11.0.0", features = ["component-model"] }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.6.0" }

[dev-dependencies]
anyhow = "1.0.71"
httpc-test = "0.1.2"
