[package]
name = "taldawasm"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[workspace.package]
version = "0.1.0"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
edition = "2021"

[workspace]
members = [
  "crates/*",
  "macros/*",
]
exclude = [
  "examples/*"
]

[workspace.dependencies]
wit-bindgen = "0.9.0"

[dependencies]
taldamacros = { path = "macros/guest" }
wit-bindgen = "0.9.0"
