[package]
name = "taldawasm"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[workspace.package]
version = "0.1.0"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
edition = "2021"

[workspace]
members = [
  "crates/*",
  "macros/*",
]

[workspace.dependencies]
wit-bindgen = "0.9.0"
http = "0.2"

[dependencies]
http-endpoint-macro = { path = "macros/http-endpoint" }
http-endpoint = { path = "crates/http-endpoint" }
