[package]
name = "http_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "http_wrapper"
path = "src/lib.rs"
proc_macro = true


[dependencies]
structs = { path = "../structs" }
proc-macro2 = "1.0.56"
quote = "1.0.27"
syn = { version = "2.0.15", features = ["full"] }