[package]
name = "http-endpoint-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.27"
syn = { version = "2.0.15", features = ["full"] }
wit-parser = "0.9.1"
wit-bindgen-rust = "0.9.0"
anyhow = "1.0.71"