[package]
name = "mqtt-endpoint-macro"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.27"
syn = { version = "2.0.15", features = ["full"] }
wit-parser = "0.9.1"
wit-bindgen-rust = "0.9.0"
anyhow = "1.0.71"